[Java] Update library for core interactions schemas
* Add new API methods to submit basic interactions (click, view, interaction).
* Include schema ID, InteractionData as parameters to submit methods.
* Add EventProcessed serializer to handle custom data parameters.
* Update data object classes with relevant mobile properties per platform schema fragments.
* Add end-to-end tests for new interaction methods and update relevant tests.
* Add app-specific json files for consistency and end-to-end tests.
* Make some agent properties added by ContextController by default (T344254)
* Update pom file to use Java 11